--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 						</article>
 						<article class="from-left">
 							<a href="images/fulls/nature/honeycomb.jpg" class="image fit"><img
-									src="images/thumbs/nature/honeycomb.jpg" title="蜂巢" alt="" /></a>
+									src="images/thumbs/nature/honeycomb.jpg" title="可可豆" alt="" /></a>
 						</article>
 						<article class="from-right">
 							<a href="images/fulls/nature/honey_room.jpg" class="image fit"><img
