--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <head>
 	<title>印象图库 | Our Best MC</title>
+	<embed src="audio/main.mp3" hidden="true" autostart="true" loop="true">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,6 +19,9 @@
 
 <body class="is-preload">
 
+	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls"
+            src="audio/main.mp3">       
+	</audio>
 	<!-- Header -->
 	<header id="header">
 		<h1>印象图库｜Our Best MC</h1>
