--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE HTML>
-<!--
-	Big Picture by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 
 <head>
 	<title>印象图库 | Our Best MC</title>
-	<embed src="audio/main_bgm.mp3" hidden="true" autostart="true" loop="true">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,9 +14,10 @@
 
 <body class="is-preload">
 
-	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls"
+	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" hidden="true"
             src="audio/main_bgm.mp3">       
 	</audio>
+	
 	<!-- Header -->
 	<header id="header">
 		<h1>印象图库｜Our Best MC</h1>
