--- a/map.html
+++ b/map.html
@@ -18,7 +18,9 @@
 
 <body class="is-preload">
 
-
+<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" hidden="true"
+            src="audio/main_bgm.mp3">       
+	</audio>
 
     <!-- Header -->
     <header id="header">
